--- a/pyext/Makefile.am
+++ b/pyext/Makefile.am
@@ -94,6 +94,15 @@ all-local: build
 # this.
 build: ctools/tools_wrap.cpp ctools/tools.py
 	$(PYTHON) setup.py build
+if IS_ELCAPITAN
+	for f in build/ctools/ctools/_*.so; do \
+		echo "Post process module "$$f; \
+		install_name_tool -change $(libdir)/libctools.0.dylib @rpath/libctools.0.dylib $$f; \
+		install_name_tool -change $(libdir)/libgamma.0.dylib @rpath/libgamma.0.dylib $$f; \
+		install_name_tool -add_rpath $(libdir) $$f; \
+		install_name_tool -add_rpath $(abs_top_srcdir)/src/.libs $$f; \
+	done
+endif
 
 install-exec-local:
 	$(PYTHON) setup.py install --prefix=$(prefix)
