Minor updates on the makefile and the logging in csobsinfo

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -1,18 +1,18 @@
 ## Process this file with automake to produce Makefile.in
 
 # Scripts to be distributed in bindir
-binscripts = tsmerge.py
+binscripts = tsmerge.py modelmerge.py
 
 # Scripts to be distributed in $(pyexecdir)/cscripts
 pythonscripts = __init__.py \
                 cspull.py cssens.py cstsdist.py cscaldb.py csresmap.py \
-                cshessobs.py csobsdef.py csspec.py cslightcrv.py \
+                cshessobs.py csobsdef.py csspec.py cslightcrv.py csobsinfo.py \
                 csinfo.py \
                 obsutils.py
 
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb csresmap \
-              cshessobs csobsdef csspec cslightcrv \
+              cshessobs csobsdef csspec cslightcrv csobsinfo \
               csinfo
 
 # Distribute scripts
