--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -46,7 +46,7 @@ rm -rf pfiles
 mkdir -p pfiles
 cp -r ../src/*/*.par pfiles/
 export PFILES=pfiles
-
+export CALDB=$PWD
 
 #
 # Test csobsdef
@@ -72,6 +72,24 @@ else
 fi
 $ECHO " ok"
 
+#
+# Test csobs2caldb
+# ================
+$ECHO -n "Test csobs2caldb: "
+chmod +x @abs_top_srcdir@/cscripts/csobs2caldb.py
+@abs_top_srcdir@/cscripts/csobs2caldb.py \
+  inobs="data/obs_unbinned.xml" \
+  rspname="test_irfs" \
+  chatter=4 > csobs2caldb.log
+$ECHO -n "."
+if [ -s "$CALDB/data/cta/cta/bcf/test_irfs/irf_file.fits" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " $CALDB/data/cta/cta/bcf/test_irfs/irf_file.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
 
 #
 # Test cspull
@@ -82,8 +100,8 @@ chmod +x @abs_top_srcdir@/cscripts/cspull.py
   inmodel="data/crab.xml" \
   outfile="pull.dat" \
   ntrials="3" \
-  caldb="irf" \
-  irf="cta_dummy_irf" \
+  caldb="cta" \
+  irf="test_irfs" \
   ra=83.6331 \
   dec=22.0145 \
   emin=0.1 \
