--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -80,19 +80,116 @@ $ECHO -n "Test csobsinfo: "
 chmod +x @abs_top_srcdir@/cscripts/csobsinfo.py
 @abs_top_srcdir@/cscripts/csobsinfo.py \
   inobs="obs.xml" \
-  ds9file="ds9.reg" \
+  ds9file="obs.reg" \
   offset=yes \
   ra="83.6331" \
   dec="22.01" > csobsinfo.log
 $ECHO -n "."
-if [ -s "ds9.reg" ]
+if [ -s "obs.reg" ]
 then
   $ECHO -n "."
 else
-  $ECHO " ds9.reg file is not valid"
+  $ECHO " obs.reg file is not valid"
   exit 1
 fi
 $ECHO " ok"
+
+
+#
+# Test csmodelinfo
+# ==============
+$ECHO -n "Test csmodelinfo: "
+chmod +x @abs_top_srcdir@/cscripts/csmodelinfo.py
+@abs_top_srcdir@/cscripts/csmodelinfo.py \
+  inmodel="data/crab.xml" \
+  ds9file="model.reg" > csmodelinfo.log
+$ECHO -n "."
+if [ -s "model.reg" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " model.reg file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+
+#
+# Test csmodelmerge (space-separated)
+# ==============
+$ECHO -n "Test csmodelmerge: "
+chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
+@abs_top_srcdir@/cscripts/csmodelmerge.py \
+  inmodels="data/crab.xml data/source1.xml" \
+  outmodel="merged_models.xml" > csmodelmerge.log
+$ECHO -n "."
+if [ -s "merged_models.xml" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_models.xml file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+
+#
+# Test csmodelmerge (comma-separated)
+# ==============
+$ECHO -n "Test csmodelmerge: "
+chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
+@abs_top_srcdir@/cscripts/csmodelmerge.py \
+  inmodels="data/crab.xml,data/source1.xml" \
+  outmodel="merged_models2.xml" > csmodelmerge.log
+$ECHO -n "."
+if [ -s "merged_models2.xml" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_models2.xml file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+
+#
+# Test csmodelmerge (wildcard string)
+# ==============
+$ECHO -n "Test csmodelmerge: "
+chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
+@abs_top_srcdir@/cscripts/csmodelmerge.py \
+  inmodels="data/model_cube_background*.xml" \
+  outmodel="merged_models3.xml" > csmodelmerge.log
+$ECHO -n "."
+if [ -s "merged_models3.xml" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_models3.xml file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+
+#
+# Test csmodelmerge (ascii-file)
+# ==============
+ls data/model_cube_background* > models.txt
+$ECHO -n "Test csmodelmerge: "
+chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
+@abs_top_srcdir@/cscripts/csmodelmerge.py \
+  inmodels="@models.txt" \
+  outmodel="merged_models4.xml" > csmodelmerge.log
+$ECHO -n "."
+if [ -s "merged_models4.xml" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_models4.xml file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+rm models.txt
 
 
 #
