Added cstsmapmerge and included documentation and unit tests

--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -117,7 +117,7 @@ $ECHO " ok"
 #
 # Test csmodelmerge (space-separated)
 # ==============
-$ECHO -n "Test csmodelmerge: "
+$ECHO -n "Test csmodelmerge (space-separated): "
 chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
 @abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="data/crab.xml data/source1.xml" \
@@ -136,7 +136,7 @@ $ECHO " ok"
 #
 # Test csmodelmerge (comma-separated)
 # ==============
-$ECHO -n "Test csmodelmerge: "
+$ECHO -n "Test csmodelmerge (comma-separated): "
 chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
 @abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="data/crab.xml,data/source1.xml" \
@@ -155,7 +155,7 @@ $ECHO " ok"
 #
 # Test csmodelmerge (wildcard string)
 # ==============
-$ECHO -n "Test csmodelmerge: "
+$ECHO -n "Test csmodelmerge (wildcard string): "
 chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
 @abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="data/model_cube_background*.xml" \
@@ -175,7 +175,7 @@ $ECHO " ok"
 # Test csmodelmerge (ascii-file)
 # ==============
 ls data/model_cube_background* > models.txt
-$ECHO -n "Test csmodelmerge: "
+$ECHO -n "Test csmodelmerge (ascii-file): "
 chmod +x @abs_top_srcdir@/cscripts/csmodelmerge.py
 @abs_top_srcdir@/cscripts/csmodelmerge.py \
   inmodels="@models.txt" \
@@ -190,6 +190,84 @@ else
 fi
 $ECHO " ok"
 rm models.txt
+
+
+#
+# Test cstsmapmerge (comma-separated)
+# ==============
+$ECHO -n "Test cstsmapmerge (comma-separated): "
+chmod +x @abs_top_srcdir@/cscripts/cstsmapmerge.py
+@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+  inmaps="data/tsmap_0.fits,data/tsmap_1.fits" \
+  outmap="merged_tsmap1.fits" > cstsmapmerge.log
+$ECHO -n "."
+if [ -s "merged_tsmap1.fits" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_tsmap1.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+
+#
+# Test cstsmapmerge (space-separated)
+# ==============
+$ECHO -n "Test cstsmapmerge (space-separated): "
+chmod +x @abs_top_srcdir@/cscripts/cstsmapmerge.py
+@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+  inmaps="data/tsmap_0.fits data/tsmap_1.fits" \
+  outmap="merged_tsmap2.fits" > cstsmapmerge.log
+$ECHO -n "."
+if [ -s "merged_tsmap2.fits" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_tsmap2.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+
+#
+# Test cstsmapmerge (wildcard string)
+# ==============
+$ECHO -n "Test cstsmapmerge (wildcard string): "
+chmod +x @abs_top_srcdir@/cscripts/cstsmapmerge.py
+@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+  inmaps="data/tsmap_*.fits" \
+  outmap="merged_tsmap3.fits" > cstsmapmerge.log
+$ECHO -n "."
+if [ -s "merged_tsmap3.fits" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_tsmap3.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
+
+#
+# Test cstsmapmerge (ascii-file)
+# ==============
+ls data/tsmap_*.fits > tsmaps.txt
+$ECHO -n "Test cstsmapmerge  (ascii-file): "
+chmod +x @abs_top_srcdir@/cscripts/cstsmapmerge.py
+@abs_top_srcdir@/cscripts/cstsmapmerge.py \
+  inmaps="@tsmaps.txt" \
+  outmap="merged_tsmap4.fits" > cstsmapmerge.log
+$ECHO -n "."
+if [ -s "merged_tsmap4.fits" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " merged_tsmap4.fits file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+rm tsmaps.txt
 
 
 #
