--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -11,7 +11,7 @@ pythonscripts = __init__.py \
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb csresmap \
               cshessobs csobsdef csspec cslightcrv csobsinfo \
-              csinfo csmodelinfo csmodelmerge cstsmapmerge
+              csinfo csmodelinfo csmodelmerge cstsmapmerge \
               csobs2caldb
 
 # Distribute scripts
