--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ doc/man
 src/ctools-setup
 pyext/build/
 pyext/setup.py
+pyext/ctools/__init__.py
 pyext/ctools/tools.py
 pyext/ctools/tools_wrap.cpp
 src/ctbin/ctbin
