Add __version__ variable to cscripts. Add __version__ variable to ctools Python module.
Rename __init__.py file into __init__.py.in, add version number, and __init__.py creation instruction into configure.ac.

--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,10 @@ doc/man
 src/ctools-setup
 pyext/build/
 pyext/setup.py
+pyext/ctools/__init__.py
 pyext/ctools/tools.py
 pyext/ctools/tools_wrap.cpp
+cscripts/__init__.py
 src/ctbin/ctbin
 src/ctlike/ctlike
 src/cttsmap/cttsmap
