--- a/pyext/ctools/__init__.py.in
+++ b/pyext/ctools/__init__.py.in
@@ -1,5 +1,5 @@
 # ==========================================================================
-# cscripts Python module
+# ctools Python module
 #
 # Copyright (C) 2015 Juergen Knoedlseder
 #
@@ -17,39 +17,23 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # ==========================================================================
+# import gammalib first
+import gammalib
 
-# List all scripts in this module
-__all__ = [
-    "cscaldb",
-    "cshessobs",
-    "csinfo",
-    "cslightcrv",
-    "csobsdef",
-    "cspull",
-    "csresmap",
-    "cssens",
-    "csspec",
-    "cstsdist",
-    "obsutils",
-    "test",
-]
+# Import sub modules
+from .tools import *
 
-# Import
-from .cscaldb    import cscaldb
-from .cshessobs  import cshessobs
-from .csinfo     import csinfo
-from .cslightcrv import cslightcrv
-from .csobsdef   import csobsdef
-from .cspull     import cspull
-from .csresmap   import csresmap
-from .cssens     import cssens
-from .csspec     import csspec
-from .cstsdist   import cstsdist
-from . import obsutils
+# Remove swig register stuff
+bad_entries = [entry for entry in list(locals())
+               if entry.endswith('_swigregister')]
+for entry in bad_entries:
+    del locals()[entry]
 
-# Add test function
-def test():
-    """
-    Run cscripts tests.
-    """
-    print("No cscripts unit tests have been implemented so far.")
+# Clean-up
+del tools
+del gammalib
+del bad_entries
+del entry
+
+# Add version
+__version__ = '@PACKAGE_VERSION@'
