--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -3,14 +3,14 @@
 # Scripts to be distributed in $(pyexecdir)/cscripts
 pythonscripts = __init__.py \
                 cspull.py cssens.py cstsdist.py cscaldb.py csresmap.py \
-                cshessobs.py csobsdef.py csspec.py cslightcrv.py csobsinfo.py \
+                csiactobs.py csiactdata.py csobsdef.py csspec.py cslightcrv.py csobsinfo.py \
                 csinfo.py csmodelinfo.py csmodelmerge.py cstsmapmerge.py \
                 csobs2caldb.py \
                 obsutils.py
 
 # Scripts for which symbolic links will be created in bindir
 linkscripts = cspull cssens cstsdist cscaldb csresmap \
-              cshessobs csobsdef csspec cslightcrv csobsinfo \
+              csiactobs csiactdata csobsdef csspec cslightcrv csobsinfo \
               csinfo csmodelinfo csmodelmerge cstsmapmerge \
               csobs2caldb
 
