--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -114,6 +114,28 @@ else
 fi
 $ECHO " ok"
 
+#
+# Test csiactobs
+# ==============
+$ECHO -n "Test csiactobs: "
+chmod +x @abs_top_srcdir@/cscripts/csiactobs.py
+@abs_top_srcdir@/cscripts/csiactobs.py \
+  datapath="iactdata/" \
+  prodname="unit-test" \
+  runlistfile="iactdata/runlist.txt" \ 
+  bkgpars="1" \
+  outobs="obs.xml" \
+  outmodel="bkgmodels.xml" > csiactobs.log
+$ECHO -n "."
+if [ -s "obs.xml" ]
+then
+  $ECHO -n "."
+else
+  $ECHO " obs.xml file is not valid"
+  exit 1
+fi
+$ECHO " ok"
+
 
 #
 # Test csmodelinfo
