--- a/src/ctpsfcube/Makefile.am
+++ b/src/ctpsfcube/Makefile.am
@@ -12,6 +12,7 @@ sources = ctpsfcube.cpp
 # Libtool library
 noinst_LTLIBRARIES = libctpsfcube.la
 libctpsfcube_la_SOURCES = $(sources)
+libctpsfcube_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
 
 # Program definition
 ctpsfcube_SOURCES = main.cpp
