--- a/src/support/Makefile.am
+++ b/src/support/Makefile.am
@@ -6,3 +6,4 @@ sources = ctool.cpp
 # Build libtool library
 noinst_LTLIBRARIES = libsupport.la
 libsupport_la_SOURCES = $(sources)
+libsupport_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
