Correct Python test script.
There was an extract blank following a \ character that led to a failure, but at the same time, the failure was not catched since the script checked the presence of a file that was generated in a test before. I renamed the file that is created to a unique name, and remov of coarse the extra space.

--- a/test/test_cscripts.sh.in
+++ b/test/test_cscripts.sh.in
@@ -126,12 +126,12 @@ chmod +x @abs_top_srcdir@/cscripts/csiactobs.py
 @abs_top_srcdir@/cscripts/csiactobs.py \
   datapath="iactdata/" \
   prodname="unit-test" \
-  runlistfile="iactdata/runlist.txt" \ 
+  runlistfile="iactdata/runlist.txt" \
   bkgpars="1" \
-  outobs="obs.xml" \
+  outobs="obs2.xml" \
   outmodel="bkgmodels.xml" > csiactobs.log
 $ECHO -n "."
-if [ -s "obs.xml" ]
+if [ -s "obs2.xml" ]
 then
   $ECHO -n "."
 else
