Remove version information from convencience libraries.

--- a/src/ctbin/Makefile.am
+++ b/src/ctbin/Makefile.am
@@ -12,7 +12,7 @@ sources = ctbin.cpp
 # Libtool library
 noinst_LTLIBRARIES = libctbin.la
 libctbin_la_SOURCES = $(sources)
-libctbin_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
+libctbin_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 
 # Program definition
 ctbin_SOURCES = main.cpp
