--- a/src/ctbkgcube/Makefile.am
+++ b/src/ctbkgcube/Makefile.am
@@ -12,7 +12,7 @@ sources = ctbkgcube.cpp
 # Libtool library
 noinst_LTLIBRARIES = libctbkgcube.la
 libctbkgcube_la_SOURCES = $(sources)
-libctbkgcube_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
+libctbkgcube_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 
 # Program definition
 ctbkgcube_SOURCES = main.cpp
