--- a/src/ctskymap/Makefile.am
+++ b/src/ctskymap/Makefile.am
@@ -12,7 +12,7 @@ sources = ctskymap.cpp
 # Libtool library
 noinst_LTLIBRARIES = libctskymap.la
 libctskymap_la_SOURCES = $(sources)
-libctskymap_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
+libctskymap_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 
 # Program definition
 ctskymap_SOURCES = main.cpp
