--- a/src/cttsmap/Makefile.am
+++ b/src/cttsmap/Makefile.am
@@ -12,7 +12,7 @@ sources = cttsmap.cpp
 # Libtool library
 noinst_LTLIBRARIES = libcttsmap.la
 libcttsmap_la_SOURCES = $(sources)
-libcttsmap_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
+libcttsmap_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 
 # Program definition
 cttsmap_SOURCES = main.cpp
