--- a/src/ctulimit/Makefile.am
+++ b/src/ctulimit/Makefile.am
@@ -12,7 +12,7 @@ sources = ctulimit.cpp
 # Libtool library
 noinst_LTLIBRARIES = libctulimit.la
 libctulimit_la_SOURCES = $(sources)
-libctulimit_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
+libctulimit_la_LDFLAGS = @OPENMP_LIB_LDFLAGS@
 
 # Program definition
 ctulimit_SOURCES = main.cpp
