--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -39,6 +39,7 @@ __all__ = [
     "csfindobs",
     "csiactobs",
     "csiactdata",
+    "csiactdload",
     "obsutils",
     "test",
 ]
@@ -63,6 +64,7 @@ from .cstsmapmerge import cstsmapmerge
 from .csfindobs    import csfindobs
 from .csiactobs    import csiactobs
 from .csiactdata   import csiactdata
+from .csiactdload   import csiactdload
 from . import obsutils
 
 # Add test function
