--- a/pyext/ctools/__init__.py.in
+++ b/pyext/ctools/__init__.py.in
@@ -1,7 +1,7 @@
 # ==========================================================================
 # ctools Python module
 #
-# Copyright (C) 2015 Juergen Knoedlseder
+# Copyright (C) 2015-2016 Juergen Knoedlseder
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -21,7 +21,12 @@
 import gammalib
 
 # Import sub modules
-from .tools import *
+#from .tools import *
+import sys
+if sys.version_info[0] < 3:
+    from tools import *
+else:
+    from .tools import *
 
 # Remove swig register stuff
 bad_entries = [entry for entry in list(locals())
